SFDCProject/src/objects/Contract_Performance_Guarantee__c.object
<CustomObject>
    <fields>
        <fullName>Guaranteed_Output__c</fullName>
        <label>Guaranteed Output</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refund_Rate__c</fullName>
        <label>Refund Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refund__c</fullName>
        <label>Refund</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Contract Performance Guarantees</relationshipLabel>
        <relationshipName>Contract_Performance_Guarantees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Contract Performance Guarantee</label>
    <nameField>
        <label>Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Performance Guarantees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>